<resources>
    <string name="support_agent">Support Agent</string>
    <string name="support_agent_description">Official MiMi Money support</string>
    <string name="support_unavailable">Support is temporarily unavailable. Check your connection and try again.</string>
    <string name="app_name" translatable="false">MiMi Money</string>
    <string name="FACEBOOK_APP_ID" translatable="false">157536331666606</string>
    <string name="splash_message">Free Chat, Voice and Video calls in real-time by registering with a free Wallet address to Transact, Social and Business network.</string>
    <string name="key_message_notifications_settings_light" translatable="false">message_notifications_settings_light</string>
    <string name="key_message_group_notifications_settings_tone" translatable="false">message_group_notifications_settings_tone</string>
    <string name="key_message_group_notifications_settings_vibrate" translatable="false">message_group_notifications_settings_vibrate</string>
    <string name="key_message_group_notifications_settings_light" translatable="false">message_group_notifications_settings_light</string>
    <string name="key_call_notifications_settings_vibrate" translatable="false">call_notifications_settings_vibrate</string>
    <string name="key_enter_send" translatable="false">enter_send</string>
    <string name="key_message_font_size" translatable="false">message_font_size</string>
    <string name="key_wallpaper_message" translatable="false">wallpaper_message</string>
    <string name="key_conversations_tones" translatable="false">conversation_tones</string>
    <string name="key_message_notifications_settings_tone" translatable="false">message_notifications_settings_tone</string>
    <string name="key_call_notifications_settings_tone" translatable="false">call_notifications_settings_tone</string>
    <string name="key_message_notifications_settings_vibrate" translatable="false">message_notifications_settings_vibrate</string>
    <string name="picture_transition" translatable="false">Picture transition</string>
    <string name="user_image_transition" translatable="false">userImage</string>
    <string name="user_name_transition" translatable="false">Name</string>
    <string name="app_service_name" translatable="false">Message Service</string>
    <string name="service_running" translatable="false">Service running</string>
    <string name="service_connected" translatable="false">Connected</string>
    <string name="icon_no_calls" translatable="false">\ue892</string>
    <string name="icon_crash" translatable="false">\ue7e8</string>
    <string name="icon_no_contacts" translatable="false">\ue892</string>
    <string name="icon_no_conversations" translatable="false">\ue892</string>
    <string name="contacts_title_tab" translatable="false">\ue722</string>
    <string name="icon_settings" translatable="false">\ue672</string>
    <string name="icon_chat" translatable="false">\ue7db</string>
    <string name="icon_notification" translatable="false">\ue8aa</string>
    <string name="icon_about" translatable="false">\ue956</string>
    <string name="icon_edit" translatable="false">\ue613</string>
    <string name="date_format_today" translatable="false">HH:mm</string>
    <string name="date_format_current_month" translatable="false">dd-MM-yyyy HH:mm</string>
    <string name="date_format" translatable="false">dd-MM-yyyy</string>
    <string name="action_settings">Settings</string>
    <string name="title_conversations">Chats</string>
    <string name="title_settings">Settings</string>
    <string name="title_feed_back"><![CDATA[Help & About]]></string>
    <string name="more">More</string>
    <string name="title_sign_out">Log out</string>
    <string name="selected_count">%1$s selected</string>
    <string name="date_format_yesterday">Yesterday</string>
    <string name="calls_title_tab">Calls</string>
    <string name="chats_title_tab">Chats</string>
    <string name="number">Wallet Address or Recovery Phrase</string>
    <string name="NoMessages">There is no conversation yet, you may start one now</string>
    <string name="NoCalls">There is no call yet, you may start one now</string>
    <string name="error_response">Unable to update.</string>
    <string name="NoContacts">There is no contact, please try again later or add new one.</string>
    <string name="type_msg">Type a message</string>
    <string name="NoResult">Nothing</string>
    <string name="error_response_contacts">Unable to update your contacts.</string>
    <string name="error_response_conversations">Unable to update conversations.</string>
    <string name="error_response_groups">Unable to update groups.</string>
    <string name="error_response_messages">Unable to update messages.</string>
    <string name="name_is_too_short">the name is too short</string>
    <string name="select_picture">select an image</string>
    <string name="new_group">New group</string>
    <string name="starred_messages">Starred messages</string>
    <string name="status">Status</string>
    <string name="settings">Settings</string>
    <string name="refresh_contacts">Refresh</string>
    <string name="search">Search</string>
    <string name="add_contact">Add Contact</string>
    <string name="new_message">New Message</string>
    <string name="use_whats_clone">Hey I\'m using MiMi Money</string>
    <string name="title_activity_add_members_to_group">New group</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_profile">Profile</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="view_in_ad_book">View in address book</string>
    <string name="hello_welcome_to_whats_clone">Welcome</string>
    <string name="next">GENERATE &amp; NEXT</string>
    <string name="restore_wallet">RESTORE WALLET</string>
    <string name="secret_recovery_phrase" translatable="false">Secret recovery phrase</string>
    <string name="enter_secret_recovery_phrase" translatable="false">Enter your secret recovery phrase</string>
    <string name="invalid_secret_recovery_phrase" translatable="false">Invalid secret recovery phrase</string>
    <string name="wallet_restore_failed" translatable="false">Wallet restore failed</string>
    <string name="set_back_and_keep_calm_you_will_receive_an_sms_of_verification">Sit back and relax. We\'ll continue shortly.</string>
    <string name="set_back_and_keep_calm_you_will_receive_an_sms_of_verification_kit">Sit back and relax.</string>
    <string name="resend">Need to retry? Retry</string>
    <string name="enter_the_code_below_to_verify">Enter the code below</string>
    <string name="enter_your_code">-- -- -- -- -- --</string>
    <string name="ok">OK</string>
    <string name="please_enter_your_ver_code">Please enter your code</string>
    <string name="enter_a_val_number">Enter a valid wallet address</string>
    <string name="change_number">Change wallet</string>
    <string name="invite">INVITE</string>
    <string name="your_current_status">Your current status</string>
    <string name="select_your_new_status">Select your new status</string>
    <string name="title_activity_status">Status</string>
    <string name="Make_sure_delete_status">Do you want to delete this status</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="delete">Delete</string>
    <string name="delete_status">Delete status</string>
    <string name="cancel">Cancel</string>
    <string name="Ok">OK</string>
    <string name="write_something">Write something</string>
    <string name="error_response_status">Unable to get status</string>
    <string name="title_activity_edit_status">Edit status</string>
    <string name="deleteALL">Delete All</string>
    <string name="oops_something">Oops something went wrong </string>
    <string name="oops_something_crashed">Oops !! something went wrong . Please send a report to MiMi</string>
    <string name="no_status"> No status </string>
    <string name="no_username"> No name </string>
    <string name="edit_status_activity_title">Edit Your Status</string>
    <string name="title_activity_edit_name">Enter your name</string>
    <string name="title_select_contacts">Select contact</string>
    <string name="success_response_contacts">Your contacts have been updated successfully</string>
    <string name="edit_group_name">edit group name</string>
    <string name="exit">Exit</string>
    <string name="shareContact">Share contact</string>
    <string name="isTyping">Typing  …</string>
    <string name="isOffline">Offline</string>
    <string name="isOnline">Online</string>
    <string name="lastSeen">Last seen</string>
    <string name="call">Call</string>
    <string name="attach">Attach</string>
    <string name="search_">Search …</string>
    <string name="add_new_member">Add</string>
    <string name="type_group_subject_here">Type group subject here …</string>
    <string name="provide_group_subject_and_optional_group_icon">Provide group subject and optional group icon</string>
    <string name="title_activity_edit_group_name">Enter new subject</string>
    <string name="wallet_title_my_wallet">Wallet</string>
    <string name="wallet_action_send">Send</string>
    <string name="wallet_action_receive">Receive</string>
    <string name="wallet_action_bank">Bank</string>
    <string name="wallet_action_dapps" translatable="false">dApps</string>
    <string name="wallet_action_ai_agents">AI Agents</string>
    <string name="wallet_scan_dapp_qr">Scan dApp QR</string>
    <string name="wallet_action_pay">Pay</string>
    <string name="wallet_settings_wallet_address">Wallet address</string>
    <string name="wallet_settings_copy">Copy</string>
    <string name="wallet_settings_show_seed">Show seed phrase</string>
    <string name="wallet_settings_show_private_key">Show private key</string>
    <string name="wallet_network_label" translatable="false">Network</string>
    <string name="wallet_network_add">Add network</string>
    <string name="wallet_network_delete">del network</string>
    <string name="wallet_network_custom_help">Select a network or add a custom EVM network.</string>
    <string name="wallet_send_to_address">To address</string>
    <string name="wallet_send_amount">Amount</string>
    <string name="wallet_share">Share</string>
    <string name="referral_refer_friend_title">Caution | Warning | Disclaimer</string>
    <string name="referral_description">Never share your Secret Recovery Seed Phrase or private keys with anyone. Anyone with these can control your wallet and steal your assets. MiMi Money team cannot recover them for you.\n\n&quot;Store your Secret Recovery Seed Phrase in a safe and private place.&quot;\n&quot;Do not store it online or share it with anyone.&quot;\n&quot;MiMi Money support will never ask for your Secret Recovery Seed Phrase.&quot;\n&quot;Anyone who asks for your recovery phrase is likely trying to scam you.&quot;\n\nKey differences:\n\nSeed phrase / Secret Recovery Phrase = master backup for the entire wallet.\nPrivate key = controls one specific wallet/account address.\n\nIf someone gets either one, they can fully access and transfer your crypto assets.</string>
    <string name="wallet_security">Security</string>
    <string name="wallet_hint_address">0x...</string>
    <string name="wallet_hint_amount_decimal">0.0</string>
    <string name="wallet_gas_price_label">Gas price (Gwei)</string>
    <string name="wallet_hint_gas_price">e.g. 1.0</string>
    <string name="wallet_gas_limit_label">Gas limit</string>
    <string name="wallet_hint_gas_limit">21000</string>
    <string name="wallet_estimate_fee">Estimate Fee</string>
    <string name="wallet_estimated_fee_placeholder">Estimated fee: --</string>
    <string name="wallet_address_qr_code_content_desc">Wallet address QR code</string>
    <string name="wallet_balance_placeholder">$0</string>
</resources>