<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_settings_wallet_address"
            android:textColor="@color/colorSecondaryText"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_wallet_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:breakStrategy="simple"
            android:ellipsize="middle"
            android:maxLines="1"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_copy_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_wallet_button"
                android:textColor="@color/colorWhite"
                android:text="@string/wallet_settings_copy"/>

            <Button
                android:id="@+id/btn_share_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="@drawable/bg_wallet_button"
                android:textColor="@color/colorWhite"
                android:text="@string/wallet_share"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_qr_code"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/wallet_address_qr_code_content_desc" />


    </LinearLayout>
</ScrollView>
